--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Sample Page</title>
     <link rel="stylesheet" href="main.css"/>
   </head>
   <body>
@@ -15,9 +15,16 @@
     <section class="section-1">
       <h1>First Section</h1>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        I'm a lover of cats. Not really but I like the way pictures of cats look. I much prefer dogs.
       </p>
+    </section>
+    <section class="section-2">
+      <h2>Second Section</h2>
+      <p>
+        Look at me! I'm a tiny, furry cat!
+      </p>
+    </section>
 <a href="www.google.com">Google Link</a>
-<img class="image-1" src="tiny_cat_12573_8950.jpg"
+<img class="image-1" src="http://d21vu35cjx7sd4.cloudfront.net/dims3/MMAH/thumbnail/180x180/quality/90/?url=http%3A%2F%2Fs3.amazonaws.com%2Fassets.prod.vetstreet.com%2F17%2Fa85b40b3a511e092fe0050568d634f%2Ffile%2Fhub-cats-kitten.jpg"/>
   </body>
 </html>
